[project]
name = "vulcan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "supabase>=2.28.0",
    "typer>=0.24.1",
]

[project.scripts]
vulcan = "vulcan.cli.main:app"
