[project]
name = "vulcan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "typer>=0.24.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vulcan*"]

[project.scripts]
vulcan = "vulcan.cli.main:app"
